--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
         "browser-sync": "^2.23.6",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^5.0.0",
+        "gulp-concat": "^2.6.1",
         "gulp-cssnano": "^2.1.3",
         "gulp-pug": "^3.3.0",
         "gulp-rename": "^1.2.2",
         "gulp-sass": "^3.2.1",
-        "gulp-sourcemaps": "^2.6.4"
+        "gulp-sourcemaps": "^2.6.4",
+        "gulp-uglify": "^3.0.0",
+        "prismjs": "^1.13.0"
     }
 }
